--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <span class="material-icons">menu</span></a>
          <a href= "" class="searchbtn">
             <span class="material-icons">search</span></a>
+            <h1 class="recipe-name">GF Vegan Breakfast Cookies</h1>
 
         
     </nav>
@@ -35,7 +36,6 @@
 <!-- Introduction -->
 
 <section>
- <h1 class="recipe-name">GF Vegan Breakfast Cookies</h1>
 
  <img src="img/cookies.jpg" alt= "photo of cookies">
 
@@ -47,6 +47,8 @@
   
 </section>
 <!-- Ingredients  -->
+
+<div class="grid-wrapper">
 
 <section class="ingredients">
 <h2>Ingredients</h2>
@@ -79,11 +81,30 @@
 
 
 <!-- Nutrition  -->
-<section class="nutrition">
+<section class="n nutrition">
 <h2 class="nutrition-head">Nutritional Facts</h2> 
     <p>Serving per (1) cookie</p>
     Calories: 150 Carbohydrates: 10g Protein: 3g Fat: 6g Sodium: 40mg Sugar: 5g 
 </main>
+</section>
+
+</div>
+
+<!-- Similar Recipes -->
+
+<div class="browse"><h3>We Think You'll Love...</h3></div>
+
+<section class="similar-recipes">
+
+<div> <a href= "">No-Bake Energy Bites</a>
+<img src="img/energy-bites.jpg" alt="photo of energy bites"></div>
+
+<div> <a href= "">Baked Pumpkin Spice Oatmeal</a>
+<img src= "img/pumpkin-oats.jpeg" alt="photo of oats"></div>
+
+<div> <a href= "">Banana Walnut Pancakes</a>
+<img src="img/pancakes.jpeg" alt="photo of pancakes"></div>
+
 </section>
 
 
